added css animation

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -12,9 +12,41 @@
 }
 
 .intro-left-wrapper {
-    padding: 50px;
+  padding: 50px;
 }
 .intro-intro {
-    font-size: 30px;
-    font-weight: 300;
+  font-size: 30px;
+  font-weight: 300;
+}
+.intro-name {
+  font-size: 60px;
+}
+.intro-title {
+  overflow: hidden;
+  height: 50px;
+}
+
+.intro-title-item {
+  height: 50px;
+  font-size: 30px;
+  font-weight: bold;
+  color: green;
+  display: flex;
+  align-items: center;
+}
+
+.intro-title-wrapper {
+  height: 100%;
+  animation: move 10s ease-in-out infinite alternate;
+}
+@keyframes move {
+  33% {
+    transform: translateY(-50px);
+  }
+  66% {
+    transform: translateY(-100px);
+  }
+  100% {
+    transform: translateY(-150px);
+  }
 }
