--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -6,19 +6,32 @@
 
 .about-left {
   flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  height: 100%;
 }
 
 .about-right {
   flex: 1;
 }
-.a-card {
+.about-card {
   width: 60%;
   height: 70vh;
   border-radius: 30px;
+  position: relative;
+  overflow: hidden;
 }
 
 .about-img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.about-card.bg {
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  background-color: #333;
 }
