--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -10,7 +10,7 @@
   position: absolute;
 }
 
-.contact-wrapepr {
+.contact-wrapper {
   padding: 50px;
   display: flex;
 }
@@ -24,6 +24,45 @@
 }
 
 .contact-title {
-    font-size: 60px;
+  font-size: 60px;
   width: 80%;
+}
+
+.contact-info-item {
+  display: flex;
+  align-items: center;
+  margin: 50px 0px;
+  font-weight: 300;
+  width: 70%;
+}
+
+.contact-icon {
+  width: 30px;
+  height: 30px;
+  margin-right: 20px;
+}
+
+.contact-description {
+  font-weight: 200;
+}
+
+form {
+  margin-top: 20px;
+}
+
+input {
+  width: 50%;
+  height: 50px;
+  border: none;
+  border-bottom: 1px solid #000;
+  margin: 10px 0px;
+  font-size: 14px;
+  padding-left: 10px;
+}
+
+textarea {
+  width: 100%;
+  margin: 10px 0px;
+  font-size: 14px;
+  padding-left: 10px;
 }
