--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -21,6 +21,10 @@
 
 .contact-right {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact-title {
@@ -65,4 +69,13 @@ textarea {
   margin: 10px 0px;
   font-size: 14px;
   padding-left: 10px;
+}
+
+button {
+    border: none;
+    padding: 15px;
+    background-color: green;
+    color: white;
+    cursor: pointer;
+    font-weight: 700;
 }
