--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -35,3 +35,27 @@
   left: 50px;
   background-color: #333;
 }
+
+@media screen and (max-width: 480px) {
+  .about {
+   flex-direction: column;
+   text-align: center;
+   margin-top: 50px;
+  }
+
+  .about-left {
+    width: 100%;
+  }
+
+  .about-card {
+    height: 30vh;
+  }
+
+  .about-card.bg {
+    display: none;
+  }
+
+  .about-right {
+    padding: 20px;
+  }
+}
