--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -38,3 +38,10 @@ h2 {
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (max-width: 480px) {
+   .project {
+       width: 100%;
+       height: 30vh;
+   }
+  }
