--- a/src/components/projectList/projectList.css
+++ b/src/components/projectList/projectList.css
@@ -25,3 +25,13 @@
     flex-wrap: wrap;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 480px) {
+   .projectList {
+       padding: 10px;
+   }
+
+   .projectList-texts {
+       width: 100%;
+   }
+  }
