--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -1,6 +1,7 @@
 .intro {
   display: flex;
   height: 100vh;
+  background-color: #ffeead;
 }
 
 .intro-left {
@@ -57,7 +58,7 @@
   height: 50px;
   font-size: 30px;
   font-weight: bold;
-  color: #59b256;
+  color: #96ceb4;
   display: flex;
   align-items: center;
 }
@@ -69,7 +70,7 @@
 
 .intro-bg {
   clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
-  background-color: green;
+  background-color: #96ceb4;
   width: 100%;
   height: 95%;
   position: absolute;
@@ -92,5 +93,9 @@
 
   .intro-description {
     display: none;
+  }
+
+  .intro-title-item {
+    text-align: center;
   }
 }
