--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -6,14 +6,15 @@
   border-radius: 10px 10px 0px 0px;
   overflow: hidden;
   transition: all 0.5s ease;
+  background-color:#96ceb4;
 }
 .project:hover {
     transform: scale(1.1)
 }
 
-.project-browser {
+.project-card-top {
   height: 20px;
-  background-color: grey;
+  background-color: #96ceb4;
   display: flex;
   align-items: center;
 }
@@ -29,7 +30,6 @@
 img {
   max-width: 100%;
 }
-
 
 
 h2 {
