--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -39,6 +39,11 @@ h2 {
     align-items: center;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 @media screen and (max-width: 480px) {
    .project {
        width: 100%;
